V_1.0/EBNF_BUNIAC.txt
program
   : statement+
   ;
 
funct
    : 'F', variable , "(", variable, {",", variable} ,")" ,':'
    |'{',statement ,'}'   
    ;

statement
   : 'I', paren_expr, '{',statement,'}' ,':'
   | 'I', paren_expr ,'{',statement,'}' ,'E' ,'{',statement,'}' ,':'
   | 'W', paren_expr, '{',statement,'}' ,':'
   | 'P', paren_expr, ';'
   | atribution
   ;

paren_expression
    : '(', expression, ')'
    | '(' ,bools, ')'
    | '(' ,relats, ')'
    ;  

bools
    : expression, '//', expression
    | expression, '&&', expression
    | expression, '!',  expression
    ;

relats
    : expression, '>',  expression
    | expression, '<',  expression
    | expression, '==', expression
    | expression, '!=', expression
    ;
  
expression
   :term 
   |term, '+', term
   |term, '-', term
   ;

term
   : factor, '*', factor
   | factor, '/', factor
   ;

factor
   : '+', factor
   | '-', factor
   | number
   | '(',expression,')'
   | variable
   ;

attribution
    : variable, '=', expression
    ;

variable
   : STRING, {STRING, INT, '_'}
   ;

number
   : FLOAT
   ;

STRING
   :  "A" | "B" | "C" | "D" | "E" | "F" | "G"
    | "H" | "I" | "J" | "K" | "L" | "M" | "N"
    | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
    | "V" | "W" | "X" | "Y" | "Z" 
    | "a" | "b"| "c" | "d" | "e" | "f" | "g" 
    | "h" | "i"| "j" | "k" | "l" | "m" | "n" 
    | "o" | "p"| "q" | "r" | "s" | "t" | "u" 
    | "v" | "w"| "x" | "y" | "z" ;
   ;

FLOAT
   : INT, ['.', INT]
   ;

INT
   : "0"|"1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
   ;
